default/objects/success__Team_Achievement__c/success__Team_Achievement__c.object-meta.xml
<CustomObject>
    <description>The set of Behaviours that are linked to a Collective (Competition, Experience Group or Template). Only Rewards from the linked Behaviours will count towards the Competition or Experience Group scores.</description>
    <label>Behaviour</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Behaviour ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behaviours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>