default/objects/success__Team_Achievement__c/fields/success__Aggregate_Field__c.field-meta.xml
<CustomField>
    <fullName>success__Aggregate_Field__c</fullName>
    <inlineHelpText>Select the function or function/field combination that you wish to aggregate</inlineHelpText>
    <label>DEPRECATE - Aggregate Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>