default/objects/success__Team_Achievement__c/fields/success__Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>success__Badge_Name__c</fullName>
    <inlineHelpText>Each reward can be &#39;badged&#39; with a unique name</inlineHelpText>
    <label>Badge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>