default/objects/success__Team_Achievement__c/fields/success__Behaviour_Name__c.field-meta.xml
<CustomField>
    <fullName>success__Behaviour_Name__c</fullName>
    <label>Behaviour Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>