default/objects/success__Team_Achievement__c/fields/success__Channel__c.field-meta.xml
<CustomField>
    <fullName>success__Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rewards earned for the behaviour will be broadcast on Inspire displays showing the specified channel</inlineHelpText>
    <label>Channel</label>
    <referenceTo>success__Channel__c</referenceTo>
    <relationshipLabel>Behaviours</relationshipLabel>
    <relationshipName>Behaviours</relationshipName>
    <type>Lookup</type>
</CustomField>