default/objects/success__Team_Achievement__c/fields/success__CRON_Expression__c.field-meta.xml
<CustomField>
    <fullName>success__CRON_Expression__c</fullName>
    <label>DEPRECATE - CRON Expression</label>
    <length>64</length>
    <type>Text</type>
</CustomField>