default/objects/success__Team_Achievement__c/fields/success__Experience_Formula__c.field-meta.xml
<CustomField>
    <fullName>success__Experience_Formula__c</fullName>
    <inlineHelpText>Enter a value (or a formula that calculates a value) which is to be awarded on successful completion of the behaviour</inlineHelpText>
    <label>Points</label>
    <type>TextArea</type>
</CustomField>