default/objects/success__Team_Achievement__c/fields/success__Experience_Group__c.field-meta.xml
<CustomField>
    <fullName>success__Experience_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Rewards generated from &#39;Experience Group&#39; behaviours will only be recognised within the users Experience Group</inlineHelpText>
    <label>Experience Group</label>
    <type>Checkbox</type>
</CustomField>