default/objects/success__Team_Achievement__c/fields/success__Experience_Repeat_Formula__c.field-meta.xml
<CustomField>
    <fullName>success__Experience_Repeat_Formula__c</fullName>
    <inlineHelpText>This value (or the value calculated by the formula) will be awarded for each successful repetition of the behaviour</inlineHelpText>
    <label>DEPRECATE - Points (Repeat)</label>
    <type>TextArea</type>
</CustomField>