default/objects/success__Team_Achievement__c/fields/success__Hidden__c.field-meta.xml
<CustomField>
    <fullName>success__Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>