default/objects/success__Team_Achievement__c/fields/success__LastRunDateTime__c.field-meta.xml
<CustomField>
    <fullName>success__LastRunDateTime__c</fullName>
    <label>DEPRECATE - Last Execution</label>
    <type>DateTime</type>
</CustomField>