default/objects/success__Team_Achievement__c/fields/success__Number_of_occurrences__c.field-meta.xml
<CustomField>
    <fullName>success__Number_of_occurrences__c</fullName>
    <inlineHelpText>The value required to trigger a reward for the specified function</inlineHelpText>
    <label>DEPRECATE - Function Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>