default/objects/success__Team_Achievement__c/fields/success__Repetition_Automatically_Awarded__c.field-meta.xml
<CustomField>
    <fullName>success__Repetition_Automatically_Awarded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected the repeat reward will be instantly awarded, otherwise it must be claimed before the expiry period elapses</inlineHelpText>
    <label>Instant Award (Repeat)</label>
    <type>Checkbox</type>
</CustomField>