default/objects/success__Team_Achievement__c/fields/success__Team__c.field-meta.xml
<CustomField>
    <fullName>success__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collective</label>
    <referenceTo>success__Team__c</referenceTo>
    <relationshipLabel>Behaviours</relationshipLabel>
    <relationshipName>Team_Achievements</relationshipName>
    <type>Lookup</type>
</CustomField>