default/objects/success__Team_Achievement__c/fields/success__Time_limit_in_days__c.field-meta.xml
<CustomField>
    <fullName>success__Time_limit_in_days__c</fullName>
    <inlineHelpText>The amount of time required to complete the specified aggregate function</inlineHelpText>
    <label>DEPRECATE - Time Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>