default/objects/success__Team_Achievement__c/fields/success__Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>success__Wait_Time__c</fullName>
    <inlineHelpText>The minimum amount of time that must elapse before subsequent aggregate functions will be recognised</inlineHelpText>
    <label>Wait Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>