default/objects/success__Team_Achievement__c/fields/success__Wait_time_unit__c.field-meta.xml
<CustomField>
    <fullName>success__Wait_time_unit__c</fullName>
    <inlineHelpText>The unit of time applied to the value entered in &#39;Wait Time&#39;</inlineHelpText>
    <label>Wait Time Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>seconds</fullName>
            </value>
            <value>
                <fullName>minutes</fullName>
            </value>
            <value>
                <fullName>hours</fullName>
            </value>
            <value>
                <fullName>days</fullName>
            </value>
            <value>
                <fullName>months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>