default/objects/success__Team_Achievement__c/listViews/success__All.listView-meta.xml
<ListView>
    <fullName>success__All</fullName>
    <columns>NAME</columns>
    <columns>success__Behaviour_Name__c</columns>
    <columns>success__Badge_Name__c</columns>
    <columns>success__Experience_Formula__c</columns>
    <columns>success__Featured__c</columns>
    <columns>success__Wait_Time__c</columns>
    <columns>success__Wait_time_unit__c</columns>
    <columns>success__Maximum_number_of_rewards__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>